--- a/week8/css/style.css
+++ b/week8/css/style.css
@@ -205,19 +205,401 @@ p{
 
 
 /* Larger than mobile */
-@media (max-width: 400px) {}
+@media (max-width: 400px) {
+    h1 {
+   max-width: 100%,
 
-/* Larger than phablet (also point when grid becomes active) */
-@media (max-width: 550px) {}
+}
+
+body {
+    max-width: 100%,
+}
+
+h2 {
+ max-width: 100%,
+}
+
+h3 {
+ max-width: 100%,
+}
+
+
+h4 {
+  max-width: 100%,
+}
+
+h5 {
+ max-width: 100%,
+}
+
+h6 {
+   max-width: 100%,
+    
+}
+
+header {
+   max-width: 100%,
+
+}
+
+nav ul {
+    max-width: 100%,
+
+}
+
+
+nav li {
+    max-width: 100%,
+}
+
+
+
+article {
+    max-width: 100%,
+
+}
+
+sticker {
+   max-width: 100%,
+}
+
+
+section {
+    max-width: 100%,
+}
+
+
+footer {
+   max-width: 100%,
+    
+    
+}
+
+
+.figure {
+ max-width: 100%,
+
+}
+
+.left {
+  max-width: 100%,
+}
+
+.right {
+    max-width: 100%,
+    
+    
+}
+
+p{
+  max-width: 100%,   
+    
+}
+
+
+.contactbox {
+   max-width: 100%,
+    
+}
+}
+
 
 /* Larger than tablet */
-@media (max-width: 750px) {}
+@media (max-width: 750px) {
+        h1 {
+   max-width: 100%,
+
+}
+
+body {
+    max-width: 100%,
+}
+
+h2 {
+ max-width: 100%,
+}
+
+h3 {
+ max-width: 100%,
+}
+
+
+h4 {
+  max-width: 100%,
+}
+
+h5 {
+ max-width: 100%,
+}
+
+h6 {
+   max-width: 100%,
+    
+}
+
+header {
+   max-width: 100%,
+
+}
+
+nav ul {
+    max-width: 100%,
+
+}
+
+
+nav li {
+    max-width: 100%,
+}
+
+
+
+article {
+    max-width: 100%,
+
+}
+
+sticker {
+   max-width: 100%,
+}
+
+
+section {
+    max-width: 100%,
+}
+
+
+footer {
+   max-width: 100%,
+    
+    
+}
+
+
+.figure {
+ max-width: 100%,
+
+}
+
+.left {
+  max-width: 100%,
+}
+
+.right {
+    max-width: 100%,
+    
+    
+}
+
+p{
+  max-width: 100%,   
+    
+}
+
+
+.contactbox {
+   max-width: 100%,
+    
+}
+}
 
 /* Larger than desktop */
-@media (max-width: 1000px) {}
+@media (max-width: 1000px) {
+        h1 {
+   max-width: 100%,
+
+}
+
+body {
+    max-width: 100%,
+}
+
+h2 {
+ max-width: 100%,
+}
+
+h3 {
+ max-width: 100%,
+}
+
+
+h4 {
+  max-width: 100%,
+}
+
+h5 {
+ max-width: 100%,
+}
+
+h6 {
+   max-width: 100%,
+    
+}
+
+header {
+   max-width: 100%,
+
+}
+
+nav ul {
+    max-width: 100%,
+
+}
+
+
+nav li {
+    max-width: 100%,
+}
+
+
+
+article {
+    max-width: 100%,
+
+}
+
+sticker {
+   max-width: 100%,
+}
+
+
+section {
+    max-width: 100%,
+}
+
+
+footer {
+   max-width: 100%,
+    
+    
+}
+
+
+.figure {
+ max-width: 100%,
+
+}
+
+.left {
+  max-width: 100%,
+}
+
+.right {
+    max-width: 100%,
+    
+    
+}
+
+p{
+  max-width: 100%,   
+    
+}
+
+
+.contactbox {
+   max-width: 100%,
+    
+}
+}
 
 /* Larger than Desktop HD */
-@media (max-width: 1200px) {}
+@media (max-width: 1200px) {
+        h1 {
+   max-width: 100%,
+
+}
+
+body {
+    max-width: 100%,
+}
+
+h2 {
+ max-width: 100%,
+}
+
+h3 {
+ max-width: 100%,
+}
+
+
+h4 {
+  max-width: 100%,
+}
+
+h5 {
+ max-width: 100%,
+}
+
+h6 {
+   max-width: 100%,
+    
+}
+
+header {
+   max-width: 100%,
+
+}
+
+nav ul {
+    max-width: 100%,
+
+}
+
+
+nav li {
+    max-width: 100%,
+}
+
+
+
+article {
+    max-width: 100%,
+
+}
+
+sticker {
+   max-width: 100%,
+}
+
+
+section {
+    max-width: 100%,
+}
+
+
+footer {
+   max-width: 100%,
+    
+    
+}
+
+
+.figure {
+ max-width: 100%,
+
+}
+
+.left {
+  max-width: 100%,
+}
+
+.right {
+    max-width: 100%,
+    
+    
+}
+
+p{
+  max-width: 100%,   
+    
+}
+
+
+.contactbox {
+   max-width: 100%,
+    
+}
+}
     
     
     
