--- a/week8/css/style.css
+++ b/week8/css/style.css
@@ -23,7 +23,7 @@ a:active {
 }
 
 h1 {
-    width: 220px;
+    width: 100%;
     margin-left: 10px;
     text-align: center;
     font-family: 'Francois One', sans-serif;
@@ -36,7 +36,7 @@ body {
     font-family: 'Raleway', sans-serif;
     font-style: normal;
     margin: 34px auto;
-    width: 1250px;
+    width: 100%;
 }
 
 h2 {
@@ -102,7 +102,7 @@ nav ul {
     font-style: normal;
     list-style-type: none;
     text-align: right;
-    margin-top: -155px;
+   /* margin-top: -155px;*/
 
 }
 
@@ -126,6 +126,7 @@ article {
     font-style: normal;
     min-height: 900px;
     text-align: center;
+    width: 100%;
 
 }
 
@@ -204,403 +205,206 @@ p{
 }
 
 
-/* Larger than mobile */
-@media (max-width: 400px) {
+/* smartphone vertical orientation: 320px to +/- 479px*/
+
+@media only screen and (min-width: 20em) and (max-width: 29em) {
+    
     h1 {
-   max-width: 100%,
+   max-width: 100%;
 
 }
 
 body {
-    max-width: 100%,
+    max-width: 100%;
 }
 
 h2 {
- max-width: 100%,
+ max-width: 100%;
 }
 
 h3 {
- max-width: 100%,
+ max-width: 100%;
 }
 
 
 h4 {
-  max-width: 100%,
+  max-width: 100%;
 }
 
 h5 {
- max-width: 100%,
+ max-width: 100%;
 }
 
 h6 {
-   max-width: 100%,
+   max-width: 100%;
     
 }
 
 header {
-   max-width: 100%,
+   max-width: 100%;
 
 }
 
 nav ul {
-    max-width: 100%,
+    max-width: 100%;
 
 }
 
 
 nav li {
-    max-width: 100%,
+    max-width: 100%;
 }
 
 
 
 article {
-    max-width: 100%,
+    max-width: 100%;
 
 }
 
 sticker {
-   max-width: 100%,
+   max-width: 100%;
 }
 
 
 section {
-    max-width: 100%,
+    max-width: 100%;
 }
 
 
 footer {
-   max-width: 100%,
+   max-width: 100%;
     
     
 }
 
 
 .figure {
- max-width: 100%,
+ max-width: 100%;
 
 }
 
 .left {
-  max-width: 100%,
+  max-width: 100%;
 }
 
 .right {
-    max-width: 100%,
+    max-width: 100%;
     
     
 }
 
 p{
-  max-width: 100%,   
+  max-width: 100%;   
     
 }
 
 
 .contactbox {
-   max-width: 100%,
+   max-width: 100%;
     
 }
 }
 
 
-/* Larger than tablet */
-@media (max-width: 750px) {
+/* smartphone and tablet: 480px to +/- 719px */
+
+@media only screen and (min-width: 30em) and (max-width: 59em) {
+
         h1 {
-   max-width: 100%,
+   max-width: 100%;
 
 }
 
 body {
-    max-width: 100%,
+    max-width: 100%;
 }
 
 h2 {
- max-width: 100%,
+ max-width: 100%;
 }
 
 h3 {
- max-width: 100%,
+ max-width: 100%;
 }
 
 
 h4 {
-  max-width: 100%,
+  max-width: 100%;
 }
 
 h5 {
- max-width: 100%,
+ max-width: 100%;
 }
 
 h6 {
-   max-width: 100%,
+   max-width: 100%;
     
 }
 
 header {
-   max-width: 100%,
+   max-width: 100%;
 
 }
 
 nav ul {
-    max-width: 100%,
+    max-width: 100%;
 
 }
 
 
 nav li {
-    max-width: 100%,
+    max-width: 100%;
 }
 
 
 
 article {
-    max-width: 100%,
+    max-width: 100%;
 
 }
 
 sticker {
-   max-width: 100%,
+   max-width: 100%;
 }
 
 
 section {
-    max-width: 100%,
+    max-width: 100%;
 }
 
 
 footer {
-   max-width: 100%,
+   max-width: 100%;
     
     
 }
 
 
 .figure {
- max-width: 100%,
+ max-width: 100%;
 
 }
 
 .left {
-  max-width: 100%,
+  max-width: 100%;
 }
 
 .right {
-    max-width: 100%,
+    max-width: 100%;
     
     
 }
 
 p{
-  max-width: 100%,   
+  max-width: 100%;   
     
 }
 
 
 .contactbox {
-   max-width: 100%,
+   max-width: 100%;
     
 }
 }
 
-/* Larger than desktop */
-@media (max-width: 1000px) {
-        h1 {
-   max-width: 100%,
-
-}
-
-body {
-    max-width: 100%,
-}
-
-h2 {
- max-width: 100%,
-}
-
-h3 {
- max-width: 100%,
-}
-
-
-h4 {
-  max-width: 100%,
-}
-
-h5 {
- max-width: 100%,
-}
-
-h6 {
-   max-width: 100%,
-    
-}
-
-header {
-   max-width: 100%,
-
-}
-
-nav ul {
-    max-width: 100%,
-
-}
-
-
-nav li {
-    max-width: 100%,
-}
-
-
-
-article {
-    max-width: 100%,
-
-}
-
-sticker {
-   max-width: 100%,
-}
-
-
-section {
-    max-width: 100%,
-}
-
-
-footer {
-   max-width: 100%,
-    
-    
-}
-
-
-.figure {
- max-width: 100%,
-
-}
-
-.left {
-  max-width: 100%,
-}
-
-.right {
-    max-width: 100%,
-    
-    
-}
-
-p{
-  max-width: 100%,   
-    
-}
-
-
-.contactbox {
-   max-width: 100%,
-    
-}
-}
-
-/* Larger than Desktop HD */
-@media (max-width: 1200px) {
-        h1 {
-   max-width: 100%,
-
-}
-
-body {
-    max-width: 100%,
-}
-
-h2 {
- max-width: 100%,
-}
-
-h3 {
- max-width: 100%,
-}
-
-
-h4 {
-  max-width: 100%,
-}
-
-h5 {
- max-width: 100%,
-}
-
-h6 {
-   max-width: 100%,
-    
-}
-
-header {
-   max-width: 100%,
-
-}
-
-nav ul {
-    max-width: 100%,
-
-}
-
-
-nav li {
-    max-width: 100%,
-}
-
-
-
-article {
-    max-width: 100%,
-
-}
-
-sticker {
-   max-width: 100%,
-}
-
-
-section {
-    max-width: 100%,
-}
-
-
-footer {
-   max-width: 100%,
-    
-    
-}
-
-
-.figure {
- max-width: 100%,
-
-}
-
-.left {
-  max-width: 100%,
-}
-
-.right {
-    max-width: 100%,
-    
-    
-}
-
-p{
-  max-width: 100%,   
-    
-}
-
-
-.contactbox {
-   max-width: 100%,
-    
-}
-}
-    
-    
-    
-    
