--- a/week13/css/style.css
+++ b/week13/css/style.css
@@ -55,7 +55,7 @@ li {
 footer {
     background-color: #FFF;
     font-family: 'Raleway', sans-serif;
-    text-align: right;
+    text-align: center;
     text-align: bottom;
 }
 
