--- a/week13/css/style.css
+++ b/week13/css/style.css
@@ -23,7 +23,6 @@ a:active {
 
 .home {
     width: 100%;
-    margin-left: 10px;
     text-align: center;
     font-family: 'Francois One', sans-serif;
     font-size: 6em;
@@ -32,9 +31,28 @@ a:active {
 
 }
 
+.title {
+    width: 100%;
+    text-align: center;
+    font-family: 'Francois One', sans-serif;
+    font-size: 2em;
+    text-decoration: none;
+    color: #EE5135;
+    padding-bottom: 20px;
+}
+
+.description {
+    width: 100%;
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1em;
+    text-decoration: none;
+    color: grey;
+}
+
 li {
     display: inline;
-  /*  text-decoration: none;
+    /*  text-decoration: none;
     color: #EE5135;*/
 }
 
@@ -56,7 +74,7 @@ footer {
     background-color: #FFF;
     font-family: 'Raleway', sans-serif;
     text-align: center;
-    text-align: bottom;
+    padding: 30px;
 }
 
 .download {
